welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:5: error: not found: value team
	else if(tea >= 2 * candy | candy >= 2* team){
                                               ^